--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 :root {
   --primary-color: #752626;
   --secondary-color: #3b3b3b;
-  --button-hover-color: #ac6a6a;
+  --button-hover-color: #804444;
   --hover-color: gold;
   --text-color: white;
   font-family: Arial, Helvetica, sans-serif;
@@ -99,13 +99,12 @@ nav .menu li a:hover,
   padding: 10px;
   display: block;
 }
-.desktop-icon, .mobile-icon {
-  display: none;
-}
 
-/* Show angle-down icon for mobile (default, mobile-first design) */
-.mobile-icon {
-  display: inline-block;
+ .angle-bottom,
+ .angle-top {
+ 
+  font-size: 1.5rem;
+
 }
 main {
   background-color: var(--secondary-color);
@@ -127,19 +126,20 @@ h4 {
   margin: 0.5rem auto;
 }
 h4 {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 section {
   display: grid;
   grid-template-columns: 1fr;
   justify-content: center;
   align-items: center;
+  text-align: center;
   margin-bottom: 1rem;
   padding: 1rem;
   gap: 1rem;
 }
 section p {
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 span {
   font-style: italic;
@@ -174,9 +174,9 @@ span {
   filter: brightness(60%);
   cursor: pointer;
 }
-/* Styling for the modal */
+/* Styling für das Modal */
 .modal {
-  display: none; /* Initially hide the modal */
+  display: none; 
   position: fixed;
   top: 0;
   left: 0;
@@ -186,11 +186,11 @@ span {
   justify-content: center;
   align-items: center;
   z-index: 1000;
-  animation: fadeOut 0.3s ease-out; /* Initially fade out */
+  animation: fadeOut 0.3s ease-out; 
 }
 
 .modal:target {
-  display: flex; /* Display the modal when the id matches the target */
+  display: flex; 
   animation: fadeIn 0.5s ease-in, slideIn 0.5s ease-out;
 }
 /* Fade-In Animation */
@@ -247,6 +247,7 @@ span {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  text-align: left;
   padding: 0.5rem;
   gap: 0.5rem;
 }
@@ -263,7 +264,7 @@ span {
 section ul,
 .footer ul {
   line-height: 1rem;
-  font-size: 0.7rem;
+  font-size: 0.8rem;
 }
 
 button,
@@ -425,6 +426,7 @@ form {
   h2 {
     font-size: 1.5rem;
     margin-bottom: 1rem;
+    
   }
   h3 {
     margin: 1rem auto;
@@ -457,12 +459,12 @@ form {
   .menu li a {
     padding: 0;
   }
-  .mobile-icon {
-    display: none; /* Hide mobile icon on desktop */
-}
-
-.desktop-icon {
-    display: inline-block; /* Show desktop icon */
+  
+  .angle-bottom,
+  .angle-top
+ {
+ 
+  transform: rotate(-90deg);
 }
   .section-2,
   .section-4 {
@@ -540,6 +542,7 @@ form {
     width: 4rem;
     height: 4rem;
   }
+
   .container,
   .container-1,
   .img-veranstaltungen {
